--- a/tools/mlir-clang/CMakeLists.txt
+++ b/tools/mlir-clang/CMakeLists.txt
@@ -29,7 +29,8 @@ add_clang_executable(mlir-clang
   Lib/utils.cc
   Lib/IfScope.cc
   Lib/TypeUtils.cc
-  Lib/CGCall.cc 
+  Lib/CGCall.cc
+  Lib/LLVMTranslator.cc
 )
 
 target_include_directories(mlir-clang PRIVATE
@@ -46,6 +47,7 @@ target_link_libraries(mlir-clang PRIVATE
   MLIRIR
   MLIRAnalysis
   MLIRLLVMIR
+  MLIRSYCL
   MLIRNVVMIR
   MLIROpenMP
   MLIRGPUOps
