Use standalone sycl dialect library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,11 +44,18 @@ else ()
   set(MLIR_TABLEGEN_OUTPUT_DIR ${LLVM_BINARY_DIR}/tools/mlir/include)
   set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
   set(POLYGEIST_TABLEGEN_OUTPUT_DIR ${LLVM_BINARY_DIR}/tools/polygeist/include)
+  set(MLIR_SYCL_MAIN_SRC_DIR ${LLVM_MAIN_SRC_DIR}/../mlir-sycl)
+  set(MLIR_SYCL_INCLUDE_DIRS ${MLIR_SYCL_MAIN_SRC_DIR}/include)
+  set(MLIR_SYCL_CMAKE_DIR ${MLIR_SYCL_MAIN_SRC_DIR}/cmake/modules)
+  set(MLIR_SYCL_TABLEGEN_OUTPUT_DIR ${LLVM_BINARY_DIR}/tools/mlir-sycl/include)
+
   include_directories(${MLIR_TABLEGEN_OUTPUT_DIR})
   include_directories(${POLYGEIST_TABLEGEN_OUTPUT_DIR})
+  include_directories(${MLIR_SYCL_TABLEGEN_OUTPUT_DIR})
 endif()
 
 list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
+list(APPEND CMAKE_MODULE_PATH "${MLIR_SYCL_CMAKE_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${CLANG_CMAKE_DIR}")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -63,6 +70,7 @@ set(POLYGEIST_TOOLS_DIR ${CMAKE_BINARY_DIR})
 include_directories(${LLVM_INCLUDE_DIRS})
 include_directories(${CLANG_INCLUDE_DIRS})
 include_directories(${MLIR_INCLUDE_DIRS})
+include_directories(${MLIR_SYCL_INCLUDE_DIRS})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_BINARY_DIR}/include)
 link_directories(${LLVM_BUILD_LIBRARY_DIR})
