--- a/tools/mlir-clang/sycl-clang.py.in
+++ b/tools/mlir-clang/sycl-clang.py.in
@@ -1,5 +1,15 @@
 #!/usr/bin/python3
 
+# Copyright (C) Codeplay Software Limited
+
+#===--- sycl-clang.py.in ---------------------------------------------------===#
+#
+# Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
+# See https://llvm.org/LICENSE.txt for license information.
+# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
+#
+#===------------------------------------------------------------------------===#
+
 import sys
 import subprocess
 import shlex
